--- a/packages/trace-admin/src/App.css
+++ b/packages/trace-admin/src/App.css
@@ -1,6 +1,3 @@
-/* 科技感字体 */
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&family=Rajdhani:wght@500&display=swap');
-
 /* 设置 html 和 body 的高度为 100% */
 html,
 body {
@@ -11,7 +8,7 @@ body {
 
 /* 全局样式 */
 .tech-bg {
-  background: #0f172a;
+  background: #151515;
   color: #fff; /* 修改此处为纯白色 */
   font-family: 'Rajdhani', sans-serif;
   height: 100vh; /* 设置高度为视口高度 */
@@ -20,9 +17,14 @@ body {
   padding: 0;
 }
 
+.logo-container{
+  display: flex;
+  justify-content: center;
+  align-items: center; /* 如需垂直居中 */
+}
 /* 文字渐变效果 */
 .text-gradient {
-  background: linear-gradient(45deg, #4facfe 0%, #00f2fe 100%);
+  background: linear-gradient(45deg, #ffffff 0%, #ebeff3 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -32,21 +34,20 @@ body {
   }
 
 /* 菜单项动效 */
-.tech-menu.ant-menu-item {
+.ant-menu-item {
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1)!important;
   border-radius: 6px;
   margin: 8px 0!important;
   color: #fff !important;
+  
 }
-
-.tech-menu.ant-menu-item:hover {
-  background: rgba(79, 172, 254, 0.1)!important;
+.ant-menu-item:hover {
+  background: #242424!important;
   transform: translateX(4px);
 }
 
-.tech-menu.ant-menu-item-selected {
-  background: linear-gradient(90deg, rgba(79, 172, 254, 0.2) 0%, transparent 100%)!important;
-  border-left: 3px solid #4facfe;
+.ant-menu-item-selected{
+  background-color: #2e2f2f!important;
 }
 
 /* 霓虹链接效果 */
@@ -56,9 +57,9 @@ body {
   transition: color 0.3s;
 }
 
-.neon-link:hover {
+/* .neon-link:hover {
   color: #00f2fe!important;
-}
+} */
 
 .neon-link::after {
   content: '';
@@ -67,7 +68,7 @@ body {
   left: 0;
   width: 0;
   height: 2px;
-  background: linear-gradient(90deg, #4facfe, #00f2fe);
+  background: linear-gradient(90deg, #ebeff3, #5d6868);
   transition: width 0.3s;
 }
 
