feat(ui):Add admin logo and initial implementation of error monitoring dashboard

--- a/packages/trace-admin/src/App.css
+++ b/packages/trace-admin/src/App.css
@@ -22,6 +22,12 @@ body {
   align-items: center; 
  }
 
+ .logo-png{
+  width: 70px;
+  height: 70px;
+  padding: 10px 5px 5px 5px;
+ }
+
 /* 文字渐变效果 */
 .text-gradient {
   background: linear-gradient(45deg, #ffffff 0%, #ebeff3 100%);
